--- a/styles.css
+++ b/styles.css
@@ -13,15 +13,8 @@ html, body {
   position: relative;
 }
 
-#model-viewer-element {
+#model-viewer {
   width: 100%;
   height: 100%;
   background-color: #eee;
-}
-
-/* Loading spinner */
-.pc-model-viewer-loading-spinner {
-  border-width: 3px;
-  border-color: rgba(0, 0, 0, 0.2);
-  border-top-color: #fff;
 }
